--- a/Task Aplication/wwwroot/sass/colors.scss
+++ b/Task Aplication/wwwroot/sass/colors.scss
@@ -1,2 +1,9 @@
-﻿$primary-color: #c281e6;
+﻿/* Backgrounds */
+$primary-color: #c281e6;
 $secondary-color: #d662ab;
+
+/* Text */
+
+$gray-1: #313131;
+$gray-2: #4f4f4f;
+$gray-3: #b2b2b2;
