--- a/Task Aplication/Views/Login/Index.cshtml
+++ b/Task Aplication/Views/Login/Index.cshtml
@@ -1,36 +1,27 @@
 ﻿@model Task_Aplication.Models.Login
 @{
-    Layout = null; 
+    ViewData["title"] = "Iniciar sesión";   
+    Layout = "_LayoutAuth"; 
 }
-<head>
-    <meta charset="utf-8" />
-    <title>Iniciar sesion</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/sass/stylesheet.min.css" />
-</head>
-<section class="login_section">
-    <div class="image_login">
-        <img src="https://cdn.wedevs.com/uploads/2020/06/Task-Manager-App-.png" alt="" />
-    </div>
-    <div class="login_form">
+<div class="login_form_container">
+    <h3 class="subtitle_name_app">Aplicación de tareas</h3>
+    <h1 class="title_registry">Iniciar sesión</h1>
+    <form class="login_form" method="post" asp-action="Index">
+            <div asp-validation-summary="ModelOnly"></div>
 
-        <h1 class="title_registry">Iniciar sesión</h1>
-        <form method="post" asp-action="Index">
-
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <div class="mb-3">
-                   <label asp-for="Email" class="form-label">Correo</label>
-                   <input asp-for="Email" type="email" class="form-control">
-                   <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                   <label asp-for="Password" class="form-label">Contraseña</label>
-                   <input asp-for="Password" type="password" class="form-control">
-                   <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-
-                <input type="submit" value="Ingresar" class="btn btn-secondary" />
-        </form>
-    </div>
-</section>
+            <div class="section_input">
+                <label asp-for="Email" class="subtitle_input"></label>
+                <input class="input_text_login" asp-for="Email" type="email" placeholder="correo@correo.com" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="section_input">
+                <label asp-for="Password" class="form-label"></label>
+                <input class="input_text_login" asp-for="Password" type="password" placeholder="contraseñasegura"/>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="inputs_login_form">
+                <input type="submit" value="Ingresar" class="button_submit" />
+                <a asp-controller="SingUp" asp-action="Index" class="button_redirect" />Registrarse</a>
+            </div>
+    </form>
+</div>
