--- a/Task Aplication/wwwroot/sass/stylesheet.scss
+++ b/Task Aplication/wwwroot/sass/stylesheet.scss
@@ -1,4 +1,7 @@
-﻿@import 'fonts'
+﻿@import 'fonts';
+@import 'colors';
+@import 'elements';
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +10,6 @@
 
 body {
     // Login section
-
     .login_section {
         width: 100vw;
         height: 100vh;
@@ -24,12 +26,105 @@ body {
             }
         }
 
-        .login_form {
-            padding: 20px;
+        .login_form_container {
+            width: 30%;
+            padding: 40px;
 
             .title_registry {
-                color: ;
-                font-weight: 700;
+                @include titles;
+                margin: 0 0 20px 0;
+            }
+
+            .subtitle_name_app {
+                @include subtitles;
+            }
+
+            .login_form {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                .section_input {
+                    display: flex;
+                    flex-direction: column;
+
+                    .subtitle_input {
+                        color: $gray-1;
+                    }
+
+                    .input_text_login {
+                        @include input_text()
+                    }
+                }
+
+                .inputs_login_form {
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 10px;
+
+                    .button_submit {
+                        @include button_default();
+                        flex: 1 1 auto;
+                    }
+
+                    .button_redirect {
+                        @include button_secondary;
+                        text-decoration: none;
+                        flex: 1 1 auto;
+                    }
+                }
+            }
+        }
+    }
+    // Sing In section
+
+    .container_sing_in_form {
+        width: 30%;
+        padding: 40px;
+
+        .title_registry {
+            @include titles;
+            margin: 0 0 20px 0;
+        }
+
+        .subtitle_name_app {
+            @include subtitles;
+        }
+
+        .sing_in_form {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+
+            .section_input {
+                display: flex;
+                flex-direction: column;
+
+                .subtitle_input {
+                    color: $gray-1;
+                }
+
+                .input_text_login {
+                    @include input_text()
+                }
+            }
+
+            .inputs_sing_in_form {
+                display: flex;
+                justify-content: space-between;
+                gap: 10px;
+
+                .button_submit {
+                    @include button_default();
+                    flex: 1 1 auto;
+                }
+
+                .button_redirect {
+                    @include button_secondary;
+                    text-decoration: none;
+                    flex: 1 1 auto;
+                }
             }
         }
     }
