--- a/Task Aplication/Views/Shared/_Layout.cshtml
+++ b/Task Aplication/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
             <div class="section_header_info">
                 <a class="subtitle_section_header" asp-area="" asp-controller="Home" asp-action="Index">Aplicacion de tareas</a>
-                <h1 class="title_section_header">Hola @ViewBag.UserData</h1>         
+                <h1 class="title_section_header">Hola</h1>         
             </div>
 
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -34,7 +34,7 @@
                     {
                         <a class="btn_logout" asp-controller="Login" asp-action="LogOut">Cerrar sesión</a>
                     }
-                                     
+                    
                 </ul>
             </div>
             
