--- a/Task Aplication/Views/SingUp/Index.cshtml
+++ b/Task Aplication/Views/SingUp/Index.cshtml
@@ -31,9 +31,9 @@
 
            </div>
 
-            <div class="mb-3">
-              <label asp-for="ImageProfile" class="subtitle_input"></label>
-              <input class="input_text_login" asp-for="ImageProfile" type="text" />
+            <div class="section_input">
+              <label asp-for="ImageProfile" class="subtitle_input">Url imagen de perfil</label>
+              <input class="input_text_login" class="input_text_login" asp-for="ImageProfile" type="text" />
               <span asp-validation-for="ImageProfile" class="text-danger"></span>
            </div>
 
